@@ -1264,6 +1264,10 @@ void ptk_file_task_progress_update( PtkFileTask* ptask )
         }
         else
             gtk_progress_bar_set_fraction( ptask->progress_bar, 0 );
+#if GTK_CHECK_VERSION (3, 0, 0)
+        gtk_progress_bar_set_show_text( GTK_PROGRESS_BAR( ptask->progress_bar ),
+                                                                        TRUE );
+#endif
     }
     else if ( ptask->complete )
     {
@@ -1273,11 +1277,21 @@ void ptk_file_task_progress_update( PtkFileTask* ptask )
                 gtk_progress_bar_set_fraction( ptask->progress_bar, 0 );
             else
                 gtk_progress_bar_set_fraction( ptask->progress_bar, 1 );
+#if GTK_CHECK_VERSION (3, 0, 0)
+            gtk_progress_bar_set_show_text( GTK_PROGRESS_BAR( ptask->progress_bar ),
+                                                                        TRUE );
+#endif
         }
     }
     else if ( task->type == VFS_FILE_TASK_EXEC
                                 && task->state_pause == VFS_FILE_TASK_RUNNING )
+    {
+#if GTK_CHECK_VERSION (3, 0, 0)
+        gtk_progress_bar_set_show_text( GTK_PROGRESS_BAR( ptask->progress_bar ),
+                                                                        FALSE );
+#endif
         gtk_progress_bar_pulse( ptask->progress_bar );
+    }
     
     // progress
     if ( task->type != VFS_FILE_TASK_EXEC )
