@@ -1,5 +1,7 @@
 0.8.4+
     fix left-click ignored in Open context submenu #31 #228
+    Dialog fix progress bar; add auto-pulse
+    [gtk3] task progress pulse don't show percent
 0.8.4   2012-12-21:
     fix detail dbl click selects next #218
     fix dlg command pipe fast
